# FrogLight

./: .deny.toml  .gitignore  .gitmodules  .justfile  .rustfmt.toml  .sort-derives.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  codegen.toml  deny.toml  generator.toml  log  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
crates/froglight-app/: Cargo.toml  README.md
crates/froglight-app/src/: lib.rs
crates/froglight-asset/: Cargo.toml  README.md
crates/froglight-asset/src/: lib.rs  source.rs
crates/froglight-assets/: Cargo.toml  README.md
crates/froglight-assets/src/: lib.rs  plugin.rs  settings.rs  states.rs
froglight/: Cargo.toml  README.md
froglight-api/: Cargo.toml  README.md
froglight-api/src/: bevy.rs  lib.rs  player.rs
froglight-api/src/agent/: mod.rs  reqwest.rs  ureq.rs
froglight-api/src/api/: mod.rs  mojang.rs  offline.rs
froglight-api/src/client/: mod.rs  reqwest.rs  ureq.rs
froglight-api/src/resolver/: hickory.rs  mod.rs  reqwest.rs  ureq.rs
froglight-api/tests/: mojang.rs  reqwest.rs  ureq.rs
froglight-biome/: Cargo.toml  README.md
froglight-biome/src/: atomic.rs  lib.rs  storage.rs  version.rs
froglight-biome/src/biome/: attribute.rs  biome.rs  feature.rs  metadata.rs  mod.rs  state.rs
froglight-biome/src/state/: mod.rs  state_global.rs
froglight-block/: Cargo.toml  README.md
froglight-block/benches/: block.rs
froglight-block/src/: atomic.rs  attribute.rs  lib.rs  state.rs  storage.rs  version.rs
froglight-block/src/block/: attribute.rs  behavior.rs  block.rs  metadata.rs  mod.rs  shape.rs  state.rs
froglight-block/src/state/: block_global.rs  mod.rs  state_global.rs  state_relative.rs
froglight-block/tests/: attributes.rs
froglight-brigadier/: Cargo.toml  README.md
froglight-brigadier/src/: argument.rs  bevy.rs  builder.rs  bundle.rs  commandset.rs  context.rs  event.rs  graph.rs  lib.rs  plugin.rs  set.rs  traits.rs
froglight-brigadier/src/argument/: alloc_impl.rs  core_impl.rs  glam_impl.rs  mod.rs  uuid_impl.rs
froglight-brigadier/src/builder/: argument.rs  mod.rs
froglight-brigadier/src/graph/: mod.rs  traits.rs
froglight-brigadier/src/parse/: mod.rs  numeric.rs  string.rs
froglight-brigadier/tests/: basic.rs
froglight-codegen/: Cargo.toml  README.md
froglight-codegen/src/: config.rs  main.rs
froglight-codegen/src/common/: mod.rs  version.rs
froglight-codegen/src/generator/: cargo_toml.rs  mod.rs  resourcepack.rs  version_type.rs
froglight-codegen/src/helper/: cargo.rs  class.rs  emulate.rs  mod.rs  module.rs  type.rs  version.rs
froglight-codegen/src/module/: mod.rs
froglight-codegen/src/source/: jardata.rs  jarfile.rs  manifest.rs  mod.rs  versionasset.rs  versiondata.rs
froglight-common/: Cargo.toml  README.md
froglight-common/src/: aabb.rs  entity.rs  identifier.rs  impossible.rs  lib.rs
froglight-common/src/bevy/: hook.rs  instance.rs  instance_hook.rs  mod.rs  query.rs  relationship.rs  world.rs
froglight-common/src/version/: generated.rs  mod.rs
froglight-entity/: Cargo.toml  README.md
froglight-entity/src/: atomic.rs  id.rs  lib.rs  storage.rs  types.rs  version.rs
froglight-entity/src/bevy/: command.rs  event.rs  mod.rs
froglight-entity/src/entity/: aabb.rs  attribute.rs  dataset.rs  entity.rs  facet.rs  metadata.rs  mod.rs  state.rs
froglight-facet/: Cargo.toml  README.md
froglight-facet-iter/: Cargo.toml  README.md
froglight-facet-iter/src/: lib.rs  reader.rs  writer.rs
froglight-facet-iter/src/deserialize/: error.rs  future.rs  item.rs  iterator.rs  logic.rs  mod.rs
froglight-facet-iter/src/serialize/: error.rs  future.rs  item.rs  logic.rs  mod.rs
froglight-facet/benches/: varint.rs
froglight-facet/src/: facet.rs  lib.rs
froglight-facet/src/deserialize/: functions.rs  future.rs  mod.rs  varint.rs
froglight-facet/src/format/: mod.rs  reader.rs  writer.rs
froglight-facet/src/jit/: mod.rs
froglight-facet/src/serialize/: functions.rs  future.rs  mod.rs  varint.rs
froglight-facet/src/simd/: mod.rs
froglight-facet/tests/: facet_attribute.rs  facet_proxy.rs  facet_serialize.rs  simd_arch.rs  simd_fallback.rs
froglight-instance/: Cargo.toml  README.md
froglight-instance/src/: lib.rs  plugin.rs  queue.rs
froglight-instance/src/instance/: data.rs  hook.rs  mod.rs  reflect.rs
froglight-internal/: Cargo.toml  README.md
froglight-internal/src/: bevy.rs  lib.rs
froglight-inventory/: Cargo.toml  README.md
froglight-inventory/src/: bevy.rs  inventory.rs  lib.rs
froglight-item/: Cargo.toml  README.md
froglight-item/src/: atomic.rs  lib.rs  storage.rs  version.rs
froglight-item/src/item/: item.rs  (+4 more)
froglight-math/: Cargo.toml  README.md
froglight-math/src/: functions.rs  lib.rs  table.rs
froglight-mutf8/: Cargo.toml  README.md  build.rs
froglight-mutf8/benches/: basic.rs  comparison.rs
froglight-mutf8/src/: lib.rs
froglight-mutf8/tests/: static_mutf8.rs  verify_cesu8.rs  verify_simd_cesu8.rs
froglight-nbt/: Cargo.toml  README.md
froglight-nbt/src/: lib.rs
froglight-nbt/tests/: access.rs
froglight-network/: Cargo.toml  README.md
froglight-network/src/: event.rs  lib.rs
froglight-packet/: Cargo.toml  README.md
froglight-packet/src/: lib.rs  version.rs
froglight-physics/: Cargo.toml  README.md
froglight-physics/src/: lib.rs  query.rs
froglight-player/: Cargo.toml  README.md
froglight-player/src/: lib.rs  profile.rs  username.rs
froglight-registry/: Cargo.toml  README.md
froglight-registry-template/: Cargo.toml  README.md
froglight-registry-template/src/: domain.rs  lib.rs  types.rs
froglight-registry/src/: lib.rs  storage.rs  version.rs
froglight-registry/tests/: registries.rs
froglight-snbt/: Cargo.toml  README.md
froglight-snbt/src/: lib.rs
froglight-snbt/tests/: access.rs
froglight-text/: Cargo.toml  README.md
froglight-text/src/: lib.rs
froglight-world/: Cargo.toml  README.md
froglight-world/benches/: contains.rs
froglight-world/src/: lib.rs  section.rs
froglight-world/tests/: borrowed.rs  owned.rs
froglight/src/: lib.rs
(+4487 files in other folders)
