
# --- Workspace Dependencies ---

[workspace.dependencies]
# Workspace Crates
froglight = { path = "froglight" }
# froglight-api = { path = "froglight-api" }
froglight-block = { path = "froglight-block" }
# froglight-brigadier = { path = "froglight-brigadier" }
froglight-common = { path = "froglight-common" }
# froglight-entity = { path = "froglight-entity" }
froglight-internal = { path = "froglight-internal" }
# froglight-inventory = { path = "froglight-inventory" }
# froglight-item = { path = "froglight-item" }
# froglight-network = { path = "froglight-network" }
# froglight-packet = { path = "froglight-packet" }
# froglight-physics = { path = "froglight-physics" }
# froglight-registry = { path = "froglight-registry" }
# froglight-world = { path = "froglight-world" }

# Bevy Dependencies
bevy = { default-features = false, version = "0.18.0-rc.2" }
bevy_app = { default-features = false, version = "0.18.0-rc.2" }
bevy_ecs = { default-features = false, version = "0.18.0-rc.2" }
bevy_math = { default-features = false, version = "0.18.0-rc.2" }
bevy_reflect = { default-features = false, version = "0.18.0-rc.2" }

# Facet Dependencies
facet = { default-features = false, version = "0.41" }
facet-minecraft = { default-features = false, git = "https://github.com/EightFactorial/facet-minecraft", version = "0.0.1" }

# Hashing & Cryptography Dependencies
aes = { default-features = false, version = "0.9.0-rc.2" }
base64 = { default-features = false, version = "0.22.1" }
cfb8 = { default-features = false, version = "0.9.0-rc.1" }
crc32c = { default-features = false, version = "0.6.8" }
foldhash = { default-features = false, version = "0.2" }
md-5 = { default-features = false, version = "0.11.0-rc.3" }
rsa = { default-features = false, version = "0.10.0-rc.10" }
sha1 = { default-features = false, version = "0.11.0-rc.3" }
sha2 = { default-features = false, version = "0.11.0-rc.3" }

# Other Dependencies
async-lock = { default-features = false, version = "3.4" }
async-net = { default-features = false, version = "2.0" }
critical-section = { default-features = false, version = "1.2" }
futures-lite = { default-features = false, version = "2.0" }
glam = { default-features = false, version = "0.30" }
indexmap = { default-features = false, version = "2.12" }
libm = { default-features = false, version = "0.2" }
parking_lot = { default-features = false, version = "0.12" }
serde = { default-features = false, version = "1.0" }
tracing = { default-features = false, version = "0.1" }
uuid = { default-features = false, version = "1.0" }
variadics_please = { default-features = false, version = "1.0" }
zerocopy = { default-features = false, version = "0.8" }

# Debug Dependencies
divan = { version = "0.1" }
flate2 = { version = "1.1" }
pretty_assertions = { version = "1.4" }
proptest = { version = "1.9" }
tracing-subscriber = { features = ["tracing-log"], version = "0.3" }

# --- Workspace Settings ---

[workspace]
default-members = ["froglight"]
members = [
  "froglight",
  # "froglight-api",
  "froglight-block",
  # "froglight-brigadier",
  "froglight-common",
  # "froglight-entity",
  "froglight-internal",
  # "froglight-inventory",
  # "froglight-item",
  # "froglight-network",
  # "froglight-packet",
  # "froglight-physics",
  # "froglight-registry",
  # "froglight-world",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/EightFactorial/FrogLight"
include = ["Cargo.toml", "README.md", "src"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/FrogLight"
rust-version = "1.93.0"
version = "0.0.1"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
clone_on_ref_ptr = "warn"
doc_markdown = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_cast = "warn"

# --- Git Cliff ---

[workspace.metadata.git-cliff.changelog]
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}
"""
postprocessors = []
render_always = true
trim = true

[workspace.metadata.git-cliff.git]
commit_parsers = [
  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
  { group = "<!-- 0 -->🚀 Features", message = "^feat" },
  { group = "<!-- 1 -->🐛 Bug Fixes", message = "^fix" },
  { group = "<!-- 2 -->🚜 Refactor", message = "^refactor" },
  { group = "<!-- 3 -->📚 Documentation", message = "^doc" },
  { group = "<!-- 4 -->⚡ Performance", message = "^perf" },
  { group = "<!-- 5 -->🎨 Styling", message = "^style" },
  { group = "<!-- 6 -->🧪 Testing", message = "^test" },
  { group = "<!-- 7 -->◀️ Revert", message = "^revert" },
  { message = "^chore|^ci", skip = true },
]
commit_preprocessors = []
conventional_commits = true
filter_commits = false
filter_unconventional = true
link_parsers = []
protect_breaking_commits = false
recurse_submodules = false
require_conventional = false
sort_commits = "oldest"
split_commits = false
topo_order = false
topo_order_commits = true
use_branch_tags = false
