# --- Workspace Settings ---

[workspace]
members = [
  "crates/froglight-block",
  "crates/froglight-brigadier",
  "crates/froglight-common",
  "crates/froglight-entity",
  "crates/froglight-internal",
  "crates/froglight-inventory",
  "crates/froglight-io",
  "crates/froglight-item",
  "crates/froglight-macros",
  "crates/froglight-nbt",
  "crates/froglight-network",
  "crates/froglight-packet",
  "crates/froglight-physics",
  "crates/froglight-registry",
  "crates/froglight-resolver",
  "crates/froglight-schedule",
  "crates/froglight-text",
  "crates/froglight-utils",
  "crates/froglight-world",
]
resolver = "2"

[workspace.package]
authors = ["EightFactorial"]
edition = "2024"
homepage = "https://github.com/EightFactorial/FrogLight"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/FrogLight"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
clone_on_ref_ptr = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
unnecessary_cast = "warn"

[workspace.dependencies]
# Bevy
bevy = { default-features = false, features = ["async_executor", "multi_threaded"], version = "0.18" }
bevy_app = { default-features = false, version = "0.16" }
bevy_derive = { default-features = false, version = "0.16" }
bevy_diagnostic = { default-features = false, version = "0.16" }
bevy_ecs = { default-features = false, version = "0.16" }
bevy_log = { default-features = false, version = "0.16" }
bevy_math = { default-features = false, version = "0.16" }
bevy_platform = { default-features = false, version = "0.16" }
bevy_reflect = { default-features = false, version = "0.16" }
bevy_state = { default-features = false, version = "0.16" }
bevy_tasks = { default-features = false, version = "0.16" }
bevy_time = { default-features = false, version = "0.16" }
bevy_transform = { default-features = false, version = "0.16" }
bevy_utils = { default-features = false, version = "0.16" }
bevy_winit = { default-features = false, version = "0.16" }

# FrogLight
froglight-block = { default-features = false, path = "crates/froglight-block", version = "0.1" }
froglight-brigadier = { default-features = false, path = "crates/froglight-brigadier", version = "0.1" }
froglight-common = { features = ["alloc"], path = "crates/froglight-common", version = "0.1" }
froglight-entity = { default-features = false, path = "crates/froglight-entity", version = "0.1" }
froglight-internal = { default-features = false, path = "crates/froglight-internal", version = "0.1" }
froglight-inventory = { default-features = false, path = "crates/froglight-inventory", version = "0.1" }
froglight-io = { default-features = false, path = "crates/froglight-io", version = "0.1" }
froglight-item = { default-features = false, path = "crates/froglight-item", version = "0.1" }
froglight-macros = { default-features = false, path = "crates/froglight-macros", version = "0.1" }
froglight-nbt = { default-features = false, path = "crates/froglight-nbt", version = "0.1" }
froglight-network = { default-features = false, path = "crates/froglight-network", version = "0.1" }
froglight-packet = { default-features = false, path = "crates/froglight-packet", version = "0.1" }
froglight-physics = { default-features = false, path = "crates/froglight-physics", version = "0.1" }
froglight-registry = { default-features = false, path = "crates/froglight-registry", version = "0.1" }
froglight-resolver = { default-features = false, path = "crates/froglight-resolver", version = "0.1" }
froglight-schedule = { default-features = false, path = "crates/froglight-schedule", version = "0.1" }
froglight-text = { default-features = false, path = "crates/froglight-text", version = "0.1" }
froglight-utils = { default-features = false, path = "crates/froglight-utils", version = "0.1" }
froglight-world = { default-features = false, path = "crates/froglight-world", version = "0.1" }

# Hashing / Cryptography
aes = { default-features = false, features = ["zeroize"], version = "0.9.0-rc.0" }
base64 = { default-features = false, features = ["alloc"], version = "0.22.1" }
cfb8 = { default-features = false, features = ["alloc", "zeroize"], version = "0.9.0-rc.0" }
crc32fast = { default-features = false, version = "1.4.2" }
md-5 = { default-features = false, features = ["alloc", "zeroize"], version = "0.11.0-rc.0" }
rsa = { default-features = false, features = [], version = "0.10.0-rc.0" }
sha2 = { default-features = false, features = ["alloc", "zeroize"], version = "0.11.0-rc.0" }

# Other
async-channel = { default-features = false, version = "2.3" }
async-compression = { default-features = false, version = "0.4" }
async-io = "2.4"
async-lock = { default-features = false, version = "3.4" }
async-net = "2.0"
bitvec = { default-features = false, features = ["alloc"], version = "1.0" }
blocking = "1.6"
derive_more = { default-features = false, features = ["full"], version = "2.0" }
downcast-rs = { default-features = false, features = ["sync"], version = "2.0" }
flate2 = { default-features = false, version = "1.1" }
futures-lite = { default-features = false, features = ["alloc"], version = "2.6" }
glam = { default-features = false, version = "0.29" }
hashify = { default-features = false, version = "0.2.6" }
hickory-resolver = { default-features = false, version = "0.25" }
indexmap = { default-features = false, version = "2.9" }
libm = { version = "0.2" }
nu-ansi-term = { default-features = false, version = "0.46" }
parking_lot = { default-features = false, version = "0.12" }
proptest = { default-features = false, version = "1.7" }
rangemap = { features = ["const_fn"], version = "1.5" }
regex = { default-features = false, features = ["perf", "unicode"], version = "1.11" }
serde = { default-features = false, features = ["alloc"], version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }
simd_cesu8 = { default-features = false, version = "1.0" }
smallvec = { features = ["const_new", "union"], version = "1.15" }
smol_str = { default-features = false, version = "0.2" }
thiserror = { default-features = false, version = "2.0" }
toml_edit = "0.22"
tracing = { default-features = false, version = "0.1" }
tracing-subscriber = { features = ["tracing-log"], version = "0.3" }
ureq = "3.0"
uuid = { default-features = false, version = "1.17" }

# --- Build Settings ---

# Dev Builds
[profile.dev]
opt-level = 1
[profile.dev.build-override]
opt-level = 3

[profile.dev-opt]
debug = false
incremental = true
inherits = "dev"
opt-level = 3

[profile.dev.package.froglight-block]
inherits = "dev-opt"
[profile.dev.package.froglight-entity]
inherits = "dev-opt"
[profile.dev.package.froglight-item]
inherits = "dev-opt"
[profile.dev.package.froglight-network]
inherits = "dev-opt"
[profile.dev.package.froglight-registry]
inherits = "dev-opt"

# Release Builds
[profile.release]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[profile.release-opt]
incremental = true
inherits = "release"

[profile.release.package.froglight-block]
inherits = "release-opt"
[profile.release.package.froglight-entity]
inherits = "release-opt"
[profile.release.package.froglight-item]
inherits = "release-opt"
[profile.release.package.froglight-network]
inherits = "release-opt"
[profile.release.package.froglight-registry]
inherits = "release-opt"

# --- FrogLight Crate ---

[package]
authors = { workspace = true }
edition = { workspace = true }
exclude = ["/.gitmodules", "/tools"]
homepage = { workspace = true }
license = { workspace = true }
name = "froglight"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
froglight-internal = { features = ["nightly"], workspace = true }

[features]
default = ["bevy", "brigadier", "crypto", "std"]

# Enable the `froglight-brigadier` crate.
brigadier = ["froglight-internal/brigadier"]
# Enable support for encrypted connections.
crypto = ["froglight-internal/crypto"]

# Enable `bevy` support.
bevy = ["froglight-internal/bevy"]
# Enable various crates' nightly features.
nightly = ["froglight-internal/nightly"]

# Enable support for rust's standard library.
std = ["froglight-internal/std"]
# Enable `no_std` support for glam.
libm = ["froglight-internal/libm"]

# Enable support for v1.21.4
v1_21_4 = ["froglight-internal/v1_21_4"]
# Enable support for v1.21.5
v1_21_5 = ["froglight-internal/v1_21_5"]
# Enable support for v1.21.6
v1_21_6 = ["froglight-internal/v1_21_6"]
