
# --- Workspace Dependencies ---

[workspace.dependencies]
# Workspace Crates
froglight = { default-features = false, path = "froglight", version = "0.0.1" }
froglight-api = { default-features = false, path = "froglight-api", version = "0.0.1" }
froglight-biome = { default-features = false, path = "froglight-biome", version = "0.0.1" }
froglight-block = { default-features = false, path = "froglight-block", version = "0.0.1" }
froglight-brigadier = { default-features = false, path = "froglight-brigadier", version = "0.0.1" }
froglight-common = { default-features = false, path = "froglight-common", version = "0.0.1" }
froglight-entity = { default-features = false, path = "froglight-entity", version = "0.0.1" }
froglight-facet = { default-features = false, path = "froglight-facet", version = "0.0.1" }
froglight-internal = { default-features = false, path = "froglight-internal", version = "0.0.1" }
froglight-inventory = { default-features = false, path = "froglight-inventory", version = "0.0.1" }
froglight-item = { default-features = false,  path = "froglight-item", version = "0.0.1" }
froglight-math = { default-features = false, path = "froglight-math", version = "0.0.1" }
froglight-mutf8 = { default-features = false, path = "froglight-mutf8", version = "0.0.1" }
froglight-nbt = { default-features = false, path = "froglight-nbt", version = "0.0.1" }
froglight-network = { default-features = false, path = "froglight-network", version = "0.0.1" }
froglight-packet = { default-features = false, path = "froglight-packet" }
froglight-physics = { default-features = false, path = "froglight-physics", version = "0.0.1" }
froglight-player = { default-features = false, path = "froglight-player", version = "0.0.1" }
froglight-registry = { default-features = false, path = "froglight-registry", version = "0.0.1" }
froglight-snbt = { default-features = false, path = "froglight-snbt", version = "0.0.1" }
froglight-world = { default-features = false, path = "froglight-world", version = "0.0.1" }

# Bevy Dependencies
bevy = { default-features = false, version = "0.18" }
bevy_app = { default-features = false, version = "0.18" }
bevy_ecs = { default-features = false, version = "0.18" }
bevy_math = { default-features = false, version = "0.18" }
bevy_reflect = { default-features = false, version = "0.18" }
bevy_tasks = { default-features = false, version = "0.18" }
bevy_transform = { default-features = false, version = "0.18" }

# Facet Dependencies
facet = { default-features = false, version = "0.44" }
facet-format = { default-features = false, version = "0.47" }
facet-json = { default-features = false, version = "0.44" }
facet-minecraft = { default-features = false, git = "https://github.com/EightFactorial/facet-minecraft", version = "0.0.1" }
facet-toml = { default-features = false, version = "0.44" }
facet-value = { default-features = false, version = "0.44" }

# Cranelift Dependencies
cranelift = { default-features = false, version = "0.131" }
cranelift-jit = { default-features = false, version = "0.131" }
cranelift-module = { default-features = false, version = "0.131" }

# Hashing & Cryptography Dependencies
aes = { default-features = false, version = "0.9.0" }
base64 = { default-features = false, version = "0.22.1" }
cfb8 = { default-features = false, version = "0.9.0" }
cipher = { default-features = false, version = "0.5.1" }
crc32c = { default-features = false, version = "0.6.8" }
foldhash = { default-features = false, version = "0.2.0" }
md-5 = { default-features = false, version = "0.11.0" }
rsa = { default-features = false, version = "0.10.0-rc.17" }
sha1 = { default-features = false, version = "0.11.0" }
sha2 = { default-features = false, version = "0.11.0" }

# Other Dependencies
arc-swap = { default-features = false, version = "1.8" }
ariadne = { default-features = false, version = "0.6" }
async-channel = { default-features = false, version = "2.5" }
async-compat = { default-features = false, version = "0.2" }
async-compression = { default-features = false, version = "0.4" }
async-io = { default-features = false, version = "2.6" }
async-lock = { default-features = false, version = "3.4" }
async-net = { default-features = false, version = "2.0" }
async-trait = { default-features = false, version = "0.1" }
bitflags = { default-features = false, version = "2.11" }
bitvec = { default-features = false, version = "1.0" }
blocking = { default-features = false, version = "1.6" }
criterion = { default-features = false, version = "0.8" }
critical-section = { default-features = false, version = "1.2" }
futures-lite = { default-features = false, version = "2.0" }
glam = { default-features = false, version = "=0.30" }
hashbrown = { default-features = false, version = "0.17" }
hickory-resolver = { default-features = false, version = "0.26" }
indexmap = { default-features = false, version = "2.13" }
lexical = { default-features = false, version = "7.0" }
libm = { default-features = false, version = "0.2" }
once_cell = { default-features = false, version = "1.21" }
parking_lot = { default-features = false, version = "0.12" }
petgraph = { default-features = false, version = "0.8" }
quick_cache = { default-features = false, version = "0.6" }
rand = { default-features = false, version = "0.10" }
replace_with = { default-features = false, version = "0.1" }
reqwest = { default-features = false, version = "0.13" }
serde = { default-features = false, version = "1.0" }
serde_json = { default-features = false, version = "1.0" }
simdutf8 = { default-features = false, version = "0.1" }
smallvec = { default-features = false, version = "1.15" }
socket2 = { default-features = false, version = "0.6" }
tokio = { default-features = false, version = "1.0" }
tracing = { default-features = false, version = "0.1" }
ureq = { default-features = false, version = "3.2" }
uuid = { default-features = false, version = "1.21" }
variadics_please = { default-features = false, version = "1.1" }
zerocopy = { default-features = false, version = "0.8" }

# Debug Dependencies
divan = { version = "0.1" }
flate2 = { version = "1.1" }
pretty_assertions = { version = "1.4" }
proptest = { version = "1.9" }
tracing-subscriber = { features = ["tracing-log"], version = "0.3" }

# --- Workspace Settings ---

[profile.release]
debug = 0
opt-level = 3
strip = "debuginfo"

[profile.distribution]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
inherits = "release"

[workspace]
default-members = ["froglight"]
members = [
  "froglight",
  "froglight-api",
  "froglight-biome",
  "froglight-block",
  "froglight-brigadier",
  "froglight-codegen",
  "froglight-common",
  "froglight-entity",
  "froglight-facet",
  "froglight-internal",
  "froglight-inventory",
  "froglight-item",
  "froglight-math",
  "froglight-mutf8",
  "froglight-nbt",
  "froglight-network",
  "froglight-packet",
  "froglight-physics",
  "froglight-player",
  "froglight-registry",
  "froglight-snbt",
  "froglight-world",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/EightFactorial/FrogLight"
include = ["Cargo.toml", "README.md", "src"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EightFactorial/FrogLight"
rust-version = "1.95.0"
version = "0.0.1"

[workspace.lints.rust]
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs_dep)"] }

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
clone_on_ref_ptr = "warn"
doc_markdown = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "warn", priority = -1 }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_cast = "warn"

# --- Git Cliff ---

[workspace.metadata.git-cliff.changelog]
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}
"""
postprocessors = []
render_always = true
trim = true

[workspace.metadata.git-cliff.git]
commit_parsers = [
  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
  { group = "<!-- 0 -->🚀 Features", message = "^feat" },
  { group = "<!-- 1 -->🐛 Bug Fixes", message = "^fix" },
  { group = "<!-- 2 -->🚜 Refactor", message = "^refactor" },
  { group = "<!-- 3 -->📚 Documentation", message = "^doc" },
  { group = "<!-- 4 -->⚡ Performance", message = "^perf" },
  { group = "<!-- 5 -->🎨 Styling", message = "^style" },
  { group = "<!-- 6 -->🧪 Testing", message = "^test" },
  { group = "<!-- 7 -->◀️ Revert", message = "^revert" },
  { message = "^chore|^ci", skip = true },
]
commit_preprocessors = []
conventional_commits = true
filter_commits = false
filter_unconventional = true
link_parsers = []
protect_breaking_commits = false
recurse_submodules = false
require_conventional = false
sort_commits = "oldest"
split_commits = false
topo_order = false
topo_order_commits = true
use_branch_tags = false
