[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-api"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
async-io = { workspace = true, optional = true }
async-net = { workspace = true, optional = true }
async-trait = { workspace = true }
bevy_app = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_reflect = { features = ["std"], workspace = true, optional = true }
bevy_tasks = { features = ["futures-lite"], workspace = true, optional = true }
blocking = { workspace = true, optional = true }
futures-lite = { features = ["std"], workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
reqwest = { features = ["blocking", "cookies", "gzip", "rustls"], workspace = true, optional = true }
serde = { features = ["derive"], workspace = true }
socket2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
ureq = { features = ["cookies", "gzip", "rustls"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["resolver", "ureq"]

# Enable `reqwest` support.
reqwest = ["dep:reqwest"]
# Enable `ureq` support.
ureq = ["dep:async-io", "dep:ureq"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:bevy_tasks"]
# Enable `hickory-resolver` support.
resolver = ["dep:async-io", "dep:async-net", "dep:blocking", "dep:futures-lite", "dep:hickory-resolver", "dep:socket2"]
# Enable `tracing` support.
tracing = ["dep:tracing"]

# Enable optimizations using the nightly toolchain
nightly = []

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.
