[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-biome"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-common = { workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable support for atomics
atomic = []
# Enable `tracing` support.
tracing = ["dep:tracing"]

# Add async locking support
async = ["dep:async-lock"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["dep:parking_lot"]

# Enable support for a global allocator
alloc = ["froglight-common/alloc"]
# Enable support for the standard library
std = ["alloc", "async-lock?/std", "froglight-common/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-common/nightly", "parking_lot?/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = []
