[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-biome"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-common = { workspace = true }

# Optional dependencies
arc-swap = { workspace = true, optional = true }
facet = { workspace = true, optional = true }
facet-format = { workspace = true, optional = true }
facet-value = { workspace = true, optional = true }
once_cell = { features = ["critical-section"], workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "biome_data", "std"]

# Enable support for atomics
atomic = []
# Enable extra support for biome data
biome_data = ["dep:facet", "dep:facet-format", "dep:facet-value", "std"]
# Enable `tracing` support.
tracing = ["dep:tracing"]

# Enable `once_cell` for `no_std` support.
once_cell = ["dep:once_cell"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["dep:parking_lot", "once_cell?/parking_lot"]

# Enable support for a global allocator
alloc = ["facet-value?/alloc", "froglight-common/alloc", "once_cell?/alloc"]
# Enable support for the standard library
std = ["alloc", "dep:arc-swap", "facet-value?/std", "froglight-common/std", "once_cell?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-common/nightly", "parking_lot?/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
