[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-biome"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
froglight-registry-template = { workspace = true }
indexmap = { workspace = true }

# Optional dependencies
facet = { features = ["alloc"], workspace = true, optional = true }
facet-format = { workspace = true, optional = true }
facet-value = { features = ["alloc"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["biome_data", "std"]

# Enable extra support for biome data
biome_data = ["dep:facet", "dep:facet-format", "dep:facet-value", "std"]

# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-registry-template/once_cell"]

# Enable support for the standard library
std = ["facet?/std", "facet-value?/std", "foldhash/std", "froglight-common/std", "froglight-registry-template/std", "indexmap/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-common/nightly", "froglight-registry-template/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
v26_2 = ["froglight-common/v26_2"]
