[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-block"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
criterion = { features = ["default", "html_reports"], workspace = true }
rand = { features = ["default"], workspace = true }

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
froglight-registry-template = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
variadics_please = { workspace = true }

# Optional dependencies
facet = { workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }

# --- Tests/Benchmarks ---

[[bench]]
name = "block"
required-features = ["std", "v26_1"]
harness = false

[[test]]
name = "attributes"
required-features = ["std"]

# --- Features ---

[features]
default = ["std"]

# Enable `facet` support.
facet = ["dep:facet", "froglight-common/facet", "dep:froglight-facet"]

# Enable `libm` for `no_std` support.
libm = ["glam/nostd-libm"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-registry-template/once_cell"]

# Enable support for the standard library
std = ["foldhash/std", "froglight-common/std", "froglight-facet?/std", "froglight-registry-template/std", "glam/std", "indexmap/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-common/nightly", "froglight-facet?/nightly", "froglight-registry-template/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
v26_2 = ["froglight-common/v26_2"]
